<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/background_material_dark"

     >

    <TextView
        android:text="@string/lbl_cardbalance"
        android:id="@+id/textView"
        android:layout_row="0"
        android:layout_column="3"

        android:textColor="@color/lbl_white"
        android:layout_width="119dp"
        android:layout_height="50dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text=""
        android:ems="10"
        android:layout_row="0"
        android:id="@+id/edTxt_card_balance"
        android:layout_column="4"
        android:textColor="@color/lbl_white"

       />

    <TextView
        android:text="@string/lbl_interest"
        android:layout_width="119dp"
        android:id="@+id/txtVw_ylyInterest"
        android:layout_height="50dp"
        android:layout_row="1"
        android:layout_column="3"

        android:textColor="@color/lbl_white"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:layout_row="1"
        android:id="@+id/edTxt_ylyInterest"
        android:textColor="@color/lbl_white"
        android:layout_column="4"/>
    <TextView
        android:text="@string/lbl_payment"
        android:id="@+id/txtVw_minPayment"
        android:layout_row="2"
        android:layout_column="3"

        android:textColor="@color/lbl_white"
        android:layout_width="119dp"
        android:layout_height="50dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text=""
        android:ems="10"
        android:layout_row="2"
        android:id="@+id/edTxt_minPayment"
        android:layout_column="4"
        android:textColor="@color/lbl_white"/>
    <TextView
        android:text="@string/lbl_cardbalance"
        android:id="@+id/txtVw_finalCardBalace"
        android:layout_row="3"
        android:layout_column="3"

        android:textColor="@color/lbl_white"
        android:layout_width="119dp"
        android:layout_height="50dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text=""
        android:ems="10"
        android:layout_row="3"
        android:id="@+id/editText"
        android:layout_column="4"
        android:textColor="@color/lbl_white"/>
    <TextView
        android:text="@string/lbl_months_remaining"
        android:id="@+id/txtVw_months_remaining"
        android:layout_row="4"
        android:layout_column="3"

        android:textColor="@color/lbl_white"
        android:layout_width="119dp"
        android:layout_height="50dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text=""
        android:ems="10"
        android:layout_row="4"
        android:id="@+id/edtxt_months_remaining"
        android:layout_column="4"
        android:textColor="@color/lbl_white"/>
    <TextView
        android:text="@string/lbl_interest_paid"
        android:id="@+id/txtVw_interest_paid"
        android:layout_row="5"
        android:layout_column="3"

        android:textColor="@color/lbl_white"
        android:layout_width="119dp"
        android:layout_height="50dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text=""
        android:ems="10"
        android:layout_row="5"
        android:id="@+id/edtxt_interest_paid"
        android:layout_column="4"
        android:textColor="@color/lbl_white"/>

    <Button
        android:layout_height="wrap_content"
        android:id="@+id/btn_Calculate"
        android:layout_row="6"

        android:layout_column="1"
        android:layout_columnSpan="5"
        android:layout_width="match_parent"
        android:text="@string/lbl_calculate"
         /><Button
    android:layout_height="wrap_content"
    android:id="@+id/btn_clear"
    android:layout_row="7"

    android:layout_column="1"
    android:layout_columnSpan="5"
    android:layout_width="match_parent"
    android:text="@string/lbl_clear"
    />


</GridLayout>